.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:46:24 **** Incremental Build of configuration Debug for project kernel ****
make all 
Building file: ../src/kernel_utils.c
Invoking: GCC C Compiler
gcc -I"/home/utnso/tp-2022-1c-Octocats/shared/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kernel_utils.d" -MT"src/kernel_utils.o" -o "src/kernel_utils.o" "../src/kernel_utils.c"
In file included from ../src/kernel_utils.h:6:0,
                 from ../src/kernel_utils.c:1:
../src/kernel_utils.c: In function ‘inicializar_kernel’:
../src/kernel_utils.c:66:21: error: expected expression before ‘{’ token
  mx_multip_actual = PTHREAD_MUTEX_INITIALIZER;
                     ^
../src/kernel_utils.c:67:15: error: expected expression before ‘{’ token
  mx_pid_sig = PTHREAD_MUTEX_INITIALIZER;
               ^
../src/kernel_utils.c:68:22: error: expected expression before ‘{’ token
  mx_cpu_desocupado = PTHREAD_MUTEX_INITIALIZER;
                      ^
../src/kernel_utils.c:69:16: error: expected expression before ‘{’ token
  mx_cola_new = PTHREAD_MUTEX_INITIALIZER;
                ^
../src/kernel_utils.c:70:19: error: expected expression before ‘{’ token
  mx_lista_ready = PTHREAD_MUTEX_INITIALIZER;
                   ^
../src/kernel_utils.c:71:14: error: expected expression before ‘{’ token
  mx_socket = PTHREAD_MUTEX_INITIALIZER;
              ^
../src/kernel_utils.c:72:11: error: expected expression before ‘{’ token
src/subdir.mk:21: recipe for target 'src/kernel_utils.o' failed
  mx_log = PTHREAD_MUTEX_INITIALIZER;
           ^
../src/kernel_utils.c:73:20: error: expected expression before ‘{’ token
  mx_cola_blocked = PTHREAD_MUTEX_INITIALIZER;
                    ^
../src/kernel_utils.c:74:30: error: expected expression before ‘{’ token
  mx_cola_suspended_blocked = PTHREAD_MUTEX_INITIALIZER;
                              ^
../src/kernel_utils.c: In function ‘procesar_socket’:
../src/kernel_utils.c:153:34: warning: passing argument 3 of ‘dictionary_put’ makes pointer from integer without a cast [-Wint-conversion]
     dictionary_put(sockets, key, cliente_socket);
                                  ^
In file included from /usr/include/commons/config.h:20:0,
                 from ../src/kernel_utils.h:9,
                 from ../src/kernel_utils.c:1:
/usr/include/commons/collections/dictionary.h:43:11: note: expected ‘void *’ but argument is of type ‘int’
  void     dictionary_put(t_dictionary *, char *key, void *data);
           ^
In file included from ../src/kernel_utils.h:16:0,
                 from ../src/kernel_utils.c:1:
../src/kernel_utils.c: At top level:
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:29:14: warning: ‘serializar_programa’ declared ‘static’ but never defined [-Wunused-function]
 static void* serializar_programa(size_t* size, t_list* instrucciones, uint16_t tamanio);
              ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:30:13: warning: ‘deserializar_programa’ declared ‘static’ but never defined [-Wunused-function]
 static void deserializar_programa(void* stream, t_list* instrucciones, uint16_t* tamanio);
             ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:34:14: warning: ‘serializar_proceso’ declared ‘static’ but never defined [-Wunused-function]
 static void* serializar_proceso(size_t* size, PCB_t* proceso, op_code codigo);
              ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:36:13: warning: ‘deserializar_proceso’ declared ‘static’ but never defined [-Wunused-function]
 static void deserializar_proceso(void* stream, PCB_t* proceso);
             ^
make: *** [src/kernel_utils.o] Error 1
20:46:47 **** Incremental Build of configuration Debug for project consola ****
make all 
make: Nothing to be done for 'all'.
20:46:48 **** Incremental Build of configuration Debug for project cpu ****
make all 
make: Nothing to be done for 'all'.
20:46:49 **** Incremental Build of configuration Debug for project kernel ****
make all 
Building file: ../src/kernel_utils.c
Invoking: GCC C Compiler
gcc -I"/home/utnso/tp-2022-1c-Octocats/shared/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/kernel_utils.d" -MT"src/kernel_utils.o" -o "src/kernel_utils.o" "../src/kernel_utils.c"
../src/kernel_utils.c: In function ‘procesar_socket’:
../src/kernel_utils.c:143:34: warning: passing argument 3 of ‘dictionary_put’ makes pointer from integer without a cast [-Wint-conversion]
     dictionary_put(sockets, key, cliente_socket);
                                  ^
In file included from /usr/include/commons/config.h:20:0,
                 from ../src/kernel_utils.h:9,
                 from ../src/kernel_utils.c:1:
/usr/include/commons/collections/dictionary.h:43:11: note: expected ‘void *’ but argument is of type ‘int’
  void     dictionary_put(t_dictionary *, char *key, void *data);
           ^
In file included from ../src/kernel_utils.h:16:0,
                 from ../src/kernel_utils.c:1:
../src/kernel_utils.c: At top level:
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:29:14: warning: ‘serializar_programa’ declared ‘static’ but never defined [-Wunused-function]
 static void* serializar_programa(size_t* size, t_list* instrucciones, uint16_t tamanio);
              ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:30:13: warning: ‘deserializar_programa’ declared ‘static’ but never defined [-Wunused-function]
 static void deserializar_programa(void* stream, t_list* instrucciones, uint16_t* tamanio);
             ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:34:14: warning: ‘serializar_proceso’ declared ‘static’ but never defined [-Wunused-function]
 static void* serializar_proceso(size_t* size, PCB_t* proceso, op_code codigo);
              ^
/home/utnso/tp-2022-1c-Octocats/shared/src/protocol.h:36:13: warning: ‘deserializar_proceso’ declared ‘static’ but never defined [-Wunused-function]
 static void deserializar_proceso(void* stream, PCB_t* proceso);
             ^
Finished building: ../src/kernel_utils.c
 
Building target: kernel
Invoking: GCC C Linker
gcc -L"/home/utnso/tp-2022-1c-Octocats/shared/Debug" -o "kernel"  ./src/kernel_main.o ./src/kernel_utils.o   -lcommons -lshared -lpthread
Finished building target: kernel
 
20:46:50 **** Incremental Build of configuration Debug for project memoria ****
make all 
make: Nothing to be done for 'all'.
20:46:51 **** Incremental Build of configuration Debug for project shared ****
make all 
make: Nothing to be done for 'all'.
20:46:52 **** Incremental Build of configuration Debug for project testing ****
make all 
make: Nothing to be done for 'all'.
